--- a/frontend/login.html
+++ b/frontend/login.html
@@ -311,12 +311,13 @@
                 <button type="submit" class="btnLoginSubmit">Entrar</button>
 
                 <div class="loginLinks">
-                    <a href="esqueceuSenha.html">Esqueceu sua senha?</a>
-                    <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
+                    <a href="esqueceuSenha.html" class="link-esqueci">Esqueceu sua senha?</a>
+    
+                    <div class="cadastro-container">
+                        <p>Não tem uma conta?</p>
+                        <a href="cadastro.html" class="btn-cadastro-outline">Cadastre-se</a>
+                    </div>
                 </div>
-            </form>
-        </div>
-    </div>
 
     <script src="utils.js"></script>
     <script src="login.js"></script>
